--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 # Compiled class file
 *.class
 
-    "java.codeGeneration.generateJavadocCustomTagValueValueValueValueTag": true,
 # Log file
 *.log
 
 # BlueJ files
 *.ctxt
 
-    "java.codeGeneration.generateJavadocCustomTagValueValueValueValueDocRoot": true,
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -17,10 +15,24 @@
 *.war
 *.nar
 *.ear
+*.zip
+*.tar.gz
+*.rar
 
-    "java.codeGeneration.generateJavadocCustomTagValueValueValueValueInheritDoc": true,
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual Machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Visual Studio Code files
-.vscode/*
+# Visual Studio Code #
+.vscode/
+*.code-workspace
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+repush.sh
