--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - 'v*'
 
 env:
-  FILE_NAME: ant_path_finding # Name of the JAR file (All lowercase, no spaces)
+  FILE_NAME: ant-path-finding # Name of the JAR file (All lowercase, no spaces, no underscores)
   ICON_NAME: antPathFinding-512
   MAIN_CLASS: App
   OUT_DIR: out
@@ -187,8 +187,8 @@ jobs:
                 --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar `
                 --main-class ${{ env.MAIN_CLASS }} `
                 --icon assets/icon/${{ env.ICON_NAME }}.ico `
-                --win-shortcut ` 
-                --win-menu ` 
+                --win-shortcut `
+                --win-menu `
                 --app-version ${{ needs.build.outputs.stripped_version }} `
                 --type msi `
                 --dest .
