--- a/resources/user/share/applications/ant_path_finding.desktop
+++ b/resources/user/share/applications/ant_path_finding.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=Ant_Path_Finding
-Exec=/opt/connect4/bin/antPathfinding
-Icon=/opt/connect4/antPathfinding-512.png
-Comment=Play Connect4 game
+Exec=/opt/ant-path-finding/bin/ant-path-finding
+Icon=/opt/ant-path-finding/antPathfinding-512.png
+Comment=Start ant-path-finding 
 Terminal=false
 Categories=Game;
