--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,7 @@ jobs:
                   --name ${{ env.FILE_NAME }} \
                   --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
                   --main-class ${{ env.MAIN_CLASS }} \
+                  --resource-dir assets \
                   --icon assets/icon/${{ env.ICON_NAME }}.icns \
                   --app-version ${{ needs.build.outputs.stripped_version }} \
                   --type dmg \
@@ -137,6 +138,7 @@ jobs:
                   --name ${{ env.FILE_NAME }} \
                   --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
                   --main-class ${{ env.MAIN_CLASS }} \
+                  --resource-dir assets \
                   --icon assets/icon/${{ env.ICON_NAME }}.png \
                   --resource-dir resources \
                   --app-version ${{ needs.build.outputs.stripped_version }} \
@@ -186,6 +188,7 @@ jobs:
                 --name ${{ env.FILE_NAME }} `
                 --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar `
                 --main-class ${{ env.MAIN_CLASS }} `
+                --resource-dir assets `
                 --icon assets/icon/${{ env.ICON_NAME }}.ico `
                 --win-shortcut `
                 --win-menu `
