--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -184,6 +184,7 @@ jobs:
       shell: powershell
       run: |
         jpackage --input out `
+                --verbose `
                 --name ${{ env.FILE_NAME }} `
                 --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar `
                 --main-class ${{ env.MAIN_CLASS }} `
