--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
         javac -d ${{ env.OUT_DIR }} src/*.java
         # Generate a temporary manifest file using echo
         echo "Main-Class: ${{ env.MAIN_CLASS }}" > customManifest.txt
-        jar cvf ${{ env.OUT_DIR }}/${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
+        jar cvfm ${{ env.OUT_DIR }}/${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
+              customManifest.txt \
               -C ${{ env.OUT_DIR }} ./ \
               -C ./ assets/
 
