--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,6 @@ jobs:
                   --name ${{ env.FILE_NAME }} \
                   --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
                   --main-class ${{ env.MAIN_CLASS }} \
-                  --resource-dir assets \
                   --icon assets/icon/${{ env.ICON_NAME }}.icns \
                   --app-version ${{ needs.build.outputs.stripped_version }} \
                   --type dmg \
@@ -190,12 +189,11 @@ jobs:
                 --name ${{ env.FILE_NAME }} `
                 --main-jar ${{ env.FILE_NAME }}-${{ env.VERSION }}.jar `
                 --main-class ${{ env.MAIN_CLASS }} `
-                --resource-dir assets `
                 --icon assets/icon/${{ env.ICON_NAME }}.ico `
                 --win-shortcut `
                 --win-menu `
                 --app-version ${{ needs.build.outputs.stripped_version }} `
-                --type exe `
+                --type msi `
                 --dest .
 
     - name: List contents of out directory (Windows)
@@ -210,8 +208,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.build.outputs.release_upload_url }}
-        asset_path: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}.exe
-        asset_name: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}-windows.exe
+        asset_path: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}.msi
+        asset_name: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}-windows.msi
         asset_content_type: application/octet-stream
 
 
