--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
       - 'v*'
 
 env:
+  JVM_ARGS: "-Xmx2G"
   FILE_NAME: ant-path-finding # Name of the JAR file (All lowercase, no spaces, no underscores)
   ICON_NAME: antPathFinding-512
   MAIN_CLASS: App
@@ -99,6 +100,7 @@ jobs:
                   --main-class ${{ env.MAIN_CLASS }} \
                   --icon assets/icon/${{ env.ICON_NAME }}.icns \
                   --app-version ${{ needs.build.outputs.stripped_version }} \
+                  --java-options "${{ env.JVM_ARGS }}" \
                   --type dmg \
                   --dest .
 
@@ -142,6 +144,7 @@ jobs:
                   --resource-dir assets \
                   --icon assets/icon/${{ env.ICON_NAME }}.png \
                   --app-version ${{ needs.build.outputs.stripped_version }} \
+                  --java-options "${{ env.JVM_ARGS }}" \
                   --type deb \
                   --dest .
 
@@ -192,7 +195,8 @@ jobs:
                 --win-shortcut `
                 --win-menu `
                 --app-version ${{ needs.build.outputs.stripped_version }} `
-                --type msi `
+                --java-options "${{ env.JVM_ARGS }}" `
+                --type exe `
                 --dest .
 
     - name: List contents of out directory (Windows)
@@ -207,8 +211,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.build.outputs.release_upload_url }}
-        asset_path: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}.msi
-        asset_name: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}-windows.msi
+        asset_path: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}.exe
+        asset_name: ${{ env.FILE_NAME }}-${{ needs.build.outputs.stripped_version }}-windows.exe
         asset_content_type: application/octet-stream
 
 
