--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,8 @@ jobs:
         echo "Main-Class: ${{ env.MAIN_CLASS }}" > customManifest.txt
         jar cvfm ${{ env.OUT_DIR }}/${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
               customManifest.txt \
-              -C ${{ env.OUT_DIR }} ./
+              -C ${{ env.OUT_DIR }} ./ \
+              -C ./ assets/
 
 
     - name: Upload JAR as Artifact
