--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,14 @@ jobs:
     - name: Compile and Build JAR
       run: |
         mkdir ${{ env.OUT_DIR }}
-        javac -d ${{ env.OUT_DIR }} -cp lib/*:src/ src/*.java
+        javac -d ${{ env.OUT_DIR }} -cp "lib/*" src/*.java
         # Generate a temporary manifest file using echo
         echo "Main-Class: ${{ env.MAIN_CLASS }}" > customManifest.txt
         jar cvfm ${{ env.OUT_DIR }}/${{ env.FILE_NAME }}-${{ env.VERSION }}.jar \
               customManifest.txt \
               -C ${{ env.OUT_DIR }} ./ \
               -C ./ assets/
+              -C lib .
 
 
     - name: Upload JAR as Artifact
